# imgui-sdl3

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  cliff.toml  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/workflows/: nix.yml
examples/: demo.rs  imoguizmo.rs  texture.rs
shaders/: imgui.frag  imgui.vert
src/: imoguizmo.rs  lib.rs  platform.rs  renderer.rs  utils.rs
