[package]
name = "imgui-sdl3"
version = "0.3.0"
authors = ["florianvazelle"]
edition = "2024"
description = "Integration of ImGui with SDL3"
license = "MIT"
repository = "https://github.com/florianvazelle/imgui-sdl3"
keywords = ["imgui", "sdl3", "gui", "renderer"]
categories = ["gui", "rendering", "graphics"]
readme = "README.md"

[dependencies]
imgui = "0.12.0"
sdl3 = "0.14.40"
mint = { version = "0.5.9", optional = true }
glam = { version = "0.30.5", optional = true }

[build-dependencies]
shaderc = "0.10.1"

[dev-dependencies]

[features]
default = []
imoguizmo = ["dep:mint", "dep:glam", "glam/mint"]

[[example]]
name = "demo"

[[example]]
required-features = ["imoguizmo"]
name = "imoguizmo"
