[package]
name = "imgui-sdl3"
version = "0.5.2"
authors = ["florianvazelle"]
edition = "2024"
description = "Integration of ImGui with SDL3"
license = "MIT"
repository = "https://github.com/florianvazelle/imgui-sdl3"
keywords = ["imgui", "sdl3", "gui", "renderer"]
categories = ["gui", "rendering", "graphics"]
readme = "README.md"

[dependencies]
imgui = "0.12"
sdl3 = "0.17"

[build-dependencies]
shaderc = "0.10.1"

[dev-dependencies]
image = "0.25.9"
